add search filter for name

--- a/views/leaderboard/leaderboard.html
+++ b/views/leaderboard/leaderboard.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <div class="search-container">
+        <input type="text" id="searchInput" placeholder="Nach Namen suchen...">
+        <button id="clearSearch">×</button>
+    </div>
+
     <div class="container" id="tableContainer">
         <table>
             <thead>
