feature: add mock users and update styling

--- a/views/admin/admin.html
+++ b/views/admin/admin.html
@@ -60,6 +60,14 @@
             </form>
         </div>
 
+        <div class="card">
+            <h2>Mock-Daten laden</h2>
+            <p>Fügt 30 Beispiel-Datensätze in die Tabelle <code>game_progress</code> ein.</p>
+            <div class="button-group">
+                <button type="button" id="loadMockBtn">30 Mock-Daten laden</button>
+            </div>
+        </div>
+
     </div>
 
     <div id="message" style="display: none;"></div>
