feat: add maze logo

--- a/views/leaderboard/leaderboard.html
+++ b/views/leaderboard/leaderboard.html
@@ -16,6 +16,14 @@
     >
       <img src="boesch_logo.png" alt="Bösch Logo" />
     </a>
+    <a
+      class="maze-logo"
+      href="https://blockly.games/maze?lang=en"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      <img src="maze_logo.png" alt="Maze Logo" />
+    </a>
     <div class="search-container">
       <div class="search-input-wrapper">
         <input
