feat: add animated click overlay indicators to logo links

--- a/views/leaderboard/leaderboard.html
+++ b/views/leaderboard/leaderboard.html
@@ -15,6 +15,7 @@
       rel="noopener noreferrer"
     >
       <img src="boesch_logo.png" alt="Bösch Logo" />
+      <span class="click-overlay" aria-hidden="true"></span>
     </a>
     <a
       class="maze-logo"
@@ -23,6 +24,7 @@
       rel="noopener noreferrer"
     >
       <img src="maze_logo.png" alt="Maze Logo" />
+      <span class="click-overlay maze-cursor" aria-hidden="true"></span>
     </a>
     <div class="search-container">
       <div class="search-input-wrapper">
